--- a/src/NavBar/Nav.css
+++ b/src/NavBar/Nav.css
@@ -45,7 +45,7 @@ ul li {
   border: 1px solid rgba(255, 255, 255, 0.18); 
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1); 
   border-radius: 30px;  */
-
+}
 .active {
   color: #438F8F;
   /* content: '';
