--- a/src/Projects/Project.css
+++ b/src/Projects/Project.css
@@ -1,5 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-article {
+
+.articles{
+  display:flex;
+  flex-direction: column-reverse;
+}
+
+article  {
     --img-scale: 1.001;
     --title-color: black;
     --link-icon-translate: -20px;
@@ -8,7 +13,6 @@ article {
     border-radius: 16px;
     box-shadow: none;
     background: #fff;
-  
     transform-origin: center;
     transition: all 0.4s ease-in-out;
     overflow: hidden;
@@ -117,8 +121,13 @@ article {
   }
   
   @media screen and (max-width: 960px) {
+    
     article {
       container: card/inline-size;
+    }
+    .article-wrapper{
+      display: flex;
+      flex-direction: column;
     }
     .article-body p {
       display: none;
@@ -127,9 +136,10 @@ article {
   
   @container card (min-width: 380px) {
     .article-wrapper {
-      display: grid;
-      grid-template-columns: 100px 1fr;
-      gap: 16px;
+      display: flex;
+           flex-direction: row;
+      grid-template-columns: 100px fr;
+      gap: 2px;
     }
     .article-body {
       padding-left: 0;
