--- a/src/Hero/Hero.css
+++ b/src/Hero/Hero.css
@@ -1,7 +1,10 @@
 .hero-body {
-  margin-top: 50px;
-  align-content: center;
-
+  width: 100%;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
   /* background-color: #d3d3d3; */
 
   /* White background with 20% transparency */
@@ -9,42 +12,231 @@
   /* border: 1px solid rgba(255, 255, 255, 0.18);  */
   /* box-shadow: 10px 20px 32px 10px rgba(0, 0, 0, 0.5);  */
 }
-.description p {
-  font-size: 1.2rem;
+
+.hero-image {
   display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 400px;
+}
+
+.hero-image img {
+  width: 200px;
+  height: 200px;
+  border-radius: 400px;
+  object-fit: cover;
+  box-shadow: 11px 11px 10px #c2c3c3,
+    -11px -11px 10px #f6f9f9;
+  margin-bottom: 20px;
+}
+
+
+.description {
+  width: 100%;
+  padding: 0px 10px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.heading {
-  display: inline;
-  text-align: center;
+.description-text{
+  font-size: 1.2rem;
+  font-weight: 600;
+  width: 60%;
+  line-height: 1.5rem;
+  color: #333;
+}
 
+.heading {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap:10px;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   font-family: "Nunito";
 }
-.heading h1 {
+.heading span:nth-child(1) {
+  margin-bottom: 10px;
   color: #509494;
+  font-size:2rem;
+  font-weight: 800;
 }
+.heading span:nth-child(2) {
+  font-size: 1.3rem;
+  font-weight:400;
+}
+.heading span:nth-child(3) {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
 .description {
   font-family: "Nunito";
   /* padding: px; */
   text-align: center;
 }
-span {
-  color: #509494;
-}
-.button-group {
-  padding: 10px 0;
-  display: flex;
-  justify-content: center;
-}
 
-.resume_link{
-  color:#509494;
+
+
+
+.resume_link {
+  color: #509494;
   text-decoration: none;
 }
-.resume_link:hover{
-  color:#000;
+
+.resume_link:hover {
+  color: #000;
+}
+
+.button-group{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:20px;
+  margin:4px 0 15px 0;
+}
+.description-button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  align-items: center;
+  padding: 20px 20px;
+  border-radius: 15px;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 0px 6px 0px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  cursor: pointer;
+  border: none;
+}
+.description-button:nth-child(1){
+  background: #000;
+  color:#fff
+}
+
+.description-button:nth-child(2){
+  background: #509494;
+  color:#fff;
+
+}
+
+.btn2:active{
+  background: #509494;
+  color:#fff;
+}
+.description-button:after {
+  content: " ";
+  width: 0%;
+  height: 100%;
+  background: #fff;
+  position: absolute;
+  transition: all 0.4s ease-in-out;
+  right: 0;
+}
+.description-button:nth-child(2):after {
+  content: " ";
+  width: 0%;
+  height: 100%;
+  background: #fff;
+  position: absolute;
+  transition: all 0.4s ease-in-out;
+  right: 0;
+}
+.description-button:hover::after {
+  border-radius: 15px;
+  right: auto;
+  left: 0;
+  width: 100%;
+}
+
+.description-button>span {
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 0.3em;
+  z-index: 20;
+  transition: all 0.3s ease-in-out;
+}
+
+.description-button:hover>span {
+  color: #000;
+  animation: scaleUp 0.3s ease-in-out;
+}
+
+.description-button:nth-child(2):hover>span {
+  color: #000;
+  animation: scaleUp 0.3s ease-in-out;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(0.95);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+
+.nav-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  z-index: 1001;
+}
+
+.nav-icons a {
+  margin:2px 0px;
+  /* background: #4e9999; */
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(40px);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 20px;
+  font-size: 1rem;
+  background-color: #fff;
+  color:black;
+}
+
+.nav-icons a:nth-child(1):hover {
+  background-color: 	#24292e;
+  color: #fff;
+  transform: scale(1.1);
+  transition: all 400ms ease-in-out;
+}
+.nav-icons a:nth-child(2):hover {
+  background-color: 	#0077B5 ;
+  color: #fff;
+  transform: scale(1.1);
+  transition: all 400ms ease-in-out;
+}
+.nav-icons a:nth-child(3):hover {
+  background: linear-gradient( #feda75,#fa7e1e,#d62976,#962fbf,#4f5bd5);
+  color: #fff;
+  transform: scale(1.1);
+  transition: all 400ms ease-in-out;
+}
+.nav-icons a:nth-child(4):hover {
+  background-color: 	#1877F2 ;
+  color: #fff;
+  transform: scale(1.1);
+  transition: all 400ms ease-in-out;
 }
 /* CSS */
 /* .button-56 {
@@ -107,38 +299,8 @@ span {
 .button-56:hover {
   outline: 0;
 }  */
-button {
-  font-family: inherit;
-  font-size: 20px;
-  background-color: #509494;
-  padding: 1em 1em;
-  padding-left: 0.9em;
-  display: flex;
-  align-items: center;
-  border: none;
-  overflow: hidden;
-  transition: 0.2s ease-in-out;
-  cursor: pointer;
-border-radius: 10px;
-box-shadow:  11px 11px 10px #c2c3c3,
-             -11px -11px 10px #f6f9f9;
-}
-button i {
-  color: white;
-}
-button a {
-  display: block;
-  text-decoration: none;
-  margin-left: 0.3em;
-  color:#eff1f1;
-  transition: all 0.3s ease-in-out;
-}
 
-button svg {
-  display: block;
-  transform: translateY(-4rem);
-  transition: transform 0.3s ease-in-out;
- }
+
 /* 
 button:hover .svg-wrapper {
   animation: fly-1 0.6s ease-in-out infinite alternate;
