--- a/src/Slide/Swipe.css
+++ b/src/Slide/Swipe.css
@@ -1,49 +1,97 @@
 .swiper {
-    width: 520px;
-    height: 380px;
-    padding: 1rem 0;
+  width: 520px;
+  height: 380px;
+  padding: 1rem 0;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: fill;
+}
+
+/* Mobile Responsive Styles */
+@media screen and (max-width: 1024px) {
+  .swiper {
+    width: 480px;
+    height: 340px;
   }
-  
+}
+
+@media screen and (max-width: 768px) {
+  .swiper {
+    width: 400px;
+    height: 300px;
+    padding: 0.8rem 0;
+  }
+
   .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+    font-size: 16px;
   }
-  
+
   .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    object-fit: fill;
+    border-radius: 8px;
   }
-  
-  @media screen and (max-width: 350px) {
-    .swiper {
-      width: 320px;
-      height: 280px;
-      padding: 1rem 0;
-    }
+}
+
+@media screen and (max-width: 576px) {
+  .swiper {
+    width: 340px;
+    height: 260px;
+    padding: 0.8rem 0;
   }
-  @media screen and (max-width: 576px) {
-    .swiper {
-      width: 320px;
-      height: 280px;
-      padding: 1rem 0;
-    }
+
+  .swiper-slide {
+    font-size: 15px;
   }
-  
+}
+
+@media screen and (max-width: 480px) {
+  .swiper {
+    width: 300px;
+    height: 240px;
+    padding: 0.6rem 0;
+  }
+
+  .swiper-slide {
+    font-size: 14px;
+  }
+
+  .swiper-slide img {
+    border-radius: 8px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .swiper {
+    width: 280px;
+    height: 220px;
+    padding: 0.5rem 0;
+  }
+
+  .swiper-slide {
+    font-size: 13px;
+  }
+}
